2003-09-25  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/Unix/Command/_perforce: suggested by
	Felix: use hostname from client, if any, for p4 -H completion
	since no other name makes sense there.

	* 19139: Test/B02typeset.ztst: add extra tests for typeset -T.

2003-09-25  Wayne Davison  <wayned@users.sourceforge.net>

	* unposted: Src/builtin.c: fixed old-style typeset -T (without
	the new separator arg).

2003-09-24  Peter Stephenson  <pws@csr.com>

	* 19129: Doc/Zsh/builtins.yo, Src/builtin.c, Src/params.c,
	Src/utils.c, Src/zsh.h: extra tie arguemnt in
	"typeset -T PAGER pager ' '" used for joining and splitting.

	* unposted: Completion/Unix/Command/_perforce: improve handling
	of label completion: now faster and uses filename to narrow
	range if after `@'.

2003-09-22  Peter Stephenson  <pws@csr.com>

	* 19105: Src/init.c, Src/jobs.c: Set shout to stderr if we
	are interactive but have no terminal.  Prevents crash in
	history and potentially elsewhere.

	* 19112: Completion/Unix/Command/_perforce: several improvements
	and bug fixes.

2003-09-21  Oliver Kiddle  <opk@zsh.org>

	* users/6606: Completion/Base/Utility/_sep_parts: handle any
	matching control options passed down

	* 19106: Doc/Zsh/compsys.yo: document use for _menu

2003-09-17  Vin Shelton  <acs@alumni.princeton.edu>

	* 19087: Doc/Zsh/mod_system.yo: Fix up makeinfo warning.

2003-09-17  Peter Stephenson  <pws@csr.com>

	* 19096: Src/Modules/system.c: Unloading zsh/system could crash
	the shell because the set and unset elements for the errnos
	array weren't installed.

2003-09-15  Vin Shelton  <acs@alumni.princeton.edu>

	* 19087: Doc/Zsh/contrib.yo: Fix capitalization to make makeinfo
	happy.

2003-09-15  Oliver Kiddle  <opk@zsh.org>

	* Vin Shelton: 19073: Src/exec.c (execcmd): Replace C++-style comment.

	* Vin Shelton: 19038: zshconfig.ac: Make sed grok icc's cpp output.

2003-09-14  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>
